# TESSERA

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/bench/: Cargo.toml
crates/bench/src/: main.rs
crates/cluster/: Cargo.toml
crates/cluster/src/: lib.rs
crates/cluster/tests/: sharding.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: kv.rs  lib.rs  raft.rs  store.rs  wire.rs
crates/consensus/tests/: chaos.rs  crash.rs  election.rs  membership.rs  replication.rs  snapshot.rs
crates/kv/: Cargo.toml
crates/kv/src/: lib.rs
crates/kv/tests/: integration.rs
crates/lincheck/: Cargo.toml
crates/lincheck/src/: lib.rs
crates/lincheck/tests/: checker.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  store.rs  ui.rs
crates/server/src/ui/: app.css  app.js  index.html
crates/server/tests/: networked.rs  persistence.rs
crates/sim/: Cargo.toml
crates/sim/src/: lib.rs  net.rs  rng.rs  simulator.rs  time.rs
crates/sim/tests/: determinism.rs
crates/storage/: Cargo.toml
crates/storage/src/: bloom.rs  crc.rs  db.rs  disk.rs  lib.rs  memtable.rs  real.rs  sstable.rs  wal.rs
crates/storage/tests/: compaction.rs  lsm.rs  realdisk.rs  recovery.rs
docs/: architecture.md  seed-99.md  simulation.md
