[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tessera-server"
path = "src/main.rs"

[[bin]]
name = "tessera-ui"
path = "src/ui.rs"

[dependencies]
consensus = { path = "../consensus" }
storage = { path = "../storage" }
kv = { path = "../kv" }
sim = { path = "../sim" }
